vue学习第二天

--- a/02-Vue插值操作/06-v-cloak指令.html
+++ b/02-Vue插值操作/06-v-cloak指令.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <div id="app">
+<!--  当网络较慢，网页还在加载 Vue.js ，而导致 Vue 来不及渲染，
+这时页面就会显示出 Vue 源代码。我们可以使用 v-cloak 指令来解决这一问题。-->
   <h2 v-cloak>{{message}}</h2>
 </div>
 
